--- a/_studies/2021-12-14_10.4314_ahs.v21i4.3.md
+++ b/_studies/2021-12-14_10.4314_ahs.v21i4.3.md
@@ -1,45 +1,16 @@
 ---
 date:        2021-12-14
-## Das Datum der Studienveröffentlichung im Format JJJJ-MM-TT.
-##
 title:       African Health Sciences
-## Titel der Publikation, beispielweise The Lancet.
-##
 authors:      'Emahi, I, Watts, MCNC, Morrison, SAJF, et al.'
-## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
-##
 status:       default
-## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
-##
 en:
   subtitle:    'COVID-19 in Africa: rethinking the tools to manage future pandemics'
-  ## Titel der Studie – bitte die einfachen Anführungszeichen beachten!
-  ##
   description: 'Corona virus disease 2019 (COVID-19) remains an incurable, progressive pneumonia-like illness characterized by fever, dry cough, fatigue, and headache during its early stages. COVID-19 has ultimately resulted in mortality in at least 2 million people worldwide. Millions of people globally have already been affected by this disease, and the numbers are expected to increase, perhaps until an effective cure or vaccine is identified. Although Africa was initially purported by the World Health Organization (WHO) to be severely hit by the pandemic, Africa recorded the least number of cases during the first wave, with lowest rates of infections, compared to Asia, Europe, and the Americas. This statistic might be attributed to the low testing capacity, existing public health awareness and lessons learnt during Ebola epidemic. Nonetheless, the relatively low rate of infection should be an opportunity for Africa to be better prepared to overcome this and future epidemics. In this paper, the authors provide insights into the dynamics and transmission of the severe acute respiratory syndrome corona virus (SARS-CoV-2) during the first wave of the pandemic; possible explanations into the relatively low rates of infection recorded in Africa; with recommendations for Africa to continue to fight Covid-19; and position itself to effectively manage future pandemics.'
-  ## Abstract, Summary oder Background der Studie – bitte die einfachen Anführungszeichen b
-  ##
-  tags:     [Covid-19, Ebola, Science Leadership in Africa, Vaccine, SARS-COV-2, Preventative Health, Future Pandemics]
-  ## Keywords bitte mit Kommata trennen.
-  ##
+  tags:     [Covid-19, Ebola, Science Leadership in Africa, Vaccine, SARS-CoV-2, Preventative Health, Future Pandemics]
 de: 
-## Deutsche DeepL-Übersetzung, siehe www.deepl.com.
-##
   subtitle:    'COVID-19 in Afrika: Überdenken der Instrumente zur Bewältigung künftiger Pandemien'
-##
   description: 'Die Coronavirus-Krankheit 2019 (COVID-19) ist eine unheilbare, fortschreitende, lungenentzündungsähnliche Krankheit, die in ihren frühen Stadien durch Fieber, trockenen Husten, Müdigkeit und Kopfschmerzen gekennzeichnet ist. COVID-19 hat letztlich bei mindestens 2 Millionen Menschen weltweit zum Tode geführt. Weltweit sind bereits Millionen von Menschen von dieser Krankheit betroffen, und es ist davon auszugehen, dass die Zahl der Erkrankten weiter steigen wird, bis vielleicht ein wirksames Heilmittel oder ein Impfstoff gefunden wird. Obwohl die Weltgesundheitsorganisation (WHO) anfangs behauptete, Afrika sei von der Pandemie am stärksten betroffen, verzeichnete Afrika während der ersten Welle die geringste Zahl von Fällen und die niedrigsten Infektionsraten im Vergleich zu Asien, Europa und dem amerikanischen Kontinent. Diese Statistik könnte auf die geringen Testkapazitäten, das vorhandene Bewusstsein für die öffentliche Gesundheit und die während der Ebola-Epidemie gemachten Erfahrungen zurückgeführt werden. Nichtsdestotrotz sollte die relativ niedrige Infektionsrate eine Chance für Afrika sein, besser auf die Bewältigung dieser und künftiger Epidemien vorbereitet zu sein. In diesem Beitrag geben die Autoren Einblicke in die Dynamik und die Übertragung des schweren akuten Atemwegssyndroms Corona-Virus (SARS-CoV-2) während der ersten Welle der Pandemie; mögliche Erklärungen für die relativ niedrigen Infektionsraten, die in Afrika verzeichnet wurden; mit Empfehlungen für Afrika, den Kampf gegen Covid-19 fortzusetzen und sich für eine wirksame Bewältigung künftiger Pandemien zu positionieren.'
-##
-  tags:     [Covid-19, Ebola, Wissenschaftsführerschaft in Afrika, Impfstoff, SARS-COV-2, Gesundheitsvorsorge, zukünftige Pandemien]
-##
+  tags:     [Covid-19, Ebola, Wissenschaftsführerschaft in Afrika, Impfstoff, SARS-CoV-2, Gesundheitsvorsorge, zukünftige Pandemien]
 group:       "Treatments"
-## Kategorie der Studie: Virus, Immunity, Therapeutics, Vaccines – bitte die Anführungszeichen beachten!
-##
 credit:      https://doi.org/10.4314/ahs.v21i4.3
-## Link zur Studien-Website.
-##
-##
-## Der Dateinamen setzt sich aus Datum, Titel der Publikation, DOI-ID der Studie (nach dem letzten Slash) und der Dateiendung zusammen. Bitte den Unterstrich vor der DOI-ID beachten!
-##
-## 2020-09-30-nature-immunology_s41590-020-00808-x.md
-##
 ---
-<object data="{{ page.link }}" style='height:calc(100vh - 400px); width: 100%' type='application/pdf'></object>
