--- a/_studies/2022-01-07_10.1007_s11332-021-00885-x.md
+++ b/_studies/2022-01-07_10.1007_s11332-021-00885-x.md
@@ -10,7 +10,7 @@ en:
 de: 
   subtitle:   '"Wearables on vogue": ein Überblick über die Auswirkungen von Wearables auf die körperliche Aktivität und das sitzende Verhalten während der COVID-19-Pandemie'
   description: 'Wearables sind eine faszinierende Möglichkeit, körperliche Aktivität zu fördern und sitzende Tätigkeiten in Bevölkerungsgruppen mit und ohne chronische Krankheiten zu reduzieren. Die aktuelle Evidenz, die die Wirksamkeit von Wearables auf die körperliche Gesundheit während der COVID-19-Pandemie belegt, muss jedoch noch erforscht werden. Die vorliegende Übersichtsarbeit soll den Lesern ein breiteres Wissen über die Auswirkungen von Wearables auf die körperliche Gesundheit während der Pandemie vermitteln. Es wurden fünf elektronische Datenbanken (Web of Science, Scopus, Ovid Medline, Cumulative Index to Nursing and Allied Health Literature und Embase) durchsucht. Die Zulassungskriterien für die einzuschließenden Studien basierten auf den PICOT-Kriterien: Population (Erwachsene, Kinder und ältere Menschen), Intervention (Wearables, Smartphones), Vergleich (jegliche Verhaltensintervention), Ergebnis (Grad der körperlichen Aktivität oder des sitzenden Verhaltens) und Zeitrahmen (zwischen dem 1. Dezember 2019 und dem 19. November 2021). Die vorliegende Übersichtsarbeit wurde nach den Richtlinien des Arksey und OMalley Frameworks erstellt. Von 469 Zitaten, die zunächst gescreent wurden, wurden 17 Artikel als einschlussfähig erachtet, und es wurde ein potenzielles Scoping durchgeführt. Am häufigsten wurden Smartphone-basierte Anwendungen mit eingebauten Beschleunigungsmessern verwendet, während einige wenige Studien Smartbands und Smartwatches zur Überwachung der körperlichen Gesundheit einsetzten. In den meisten Studien wurde die verstärkte Nutzung von Wearables bei gesunden Erwachsenen beobachtet, gefolgt von älteren Menschen, Kindern und schwangeren Frauen. Während der Pandemie wurde ein erheblicher Rückgang (fast 50 %) der körperlichen Aktivität festgestellt: tägliche Schrittzahl (- 2812 Schritte/min), Stehen (- 32,7 %) und Gehen (- 52,2 %). Wearables scheinen ein bevorstehendes Mittel zur Verbesserung der körperlichen Aktivität und zur Verringerung des sitzenden Verhaltens aus der Ferne während der COVID-19-Pandemie zu sein.'
-  tags:     [Physical activity, Wearable, Smartwatch, Sedentary behavior, COVID-19, Lockdow]
+  tags:     [Körperliche Aktivität, Wearable, Smartwatch, sesshaftes Verhalten, COVID-19, Lockdown]
 group:  "Interventions"
 credit:      https://doi.org/10.1007/s11332-021-00885-x
 ---
