--- a/_studies/2020-08-28_10.3390_nu12092633.md
+++ b/_studies/2020-08-28_10.3390_nu12092633.md
@@ -1,43 +1,16 @@
 ---
 date:        2020-08-28
-## Das Datum der Studienveröffentlichung im Format JJJJ-MM-TT.
-##
 title:       Nutrients 
-## Titel der Publikation, beispielweise The Lancet.
-##
 authors:      'Alkhatib, A'
-## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
-##
 status:       default
-## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
-##
 en:
   subtitle:    'Antiviral Functional Foods and Exercise Lifestyle Prevention of Coronavirus'
-  ## Titel der Studie – bitte die einfachen Anführungszeichen beachten!
-  ##
   description: 'Novel coronavirus (COVID-19) is causing global mortality and lockdown burdens. A compromised immune system is a known risk factor for all viral influenza infections. Functional foods optimize the immune system capacity to prevent and control pathogenic viral infections, while physical activity augments such protective benefits. Exercise enhances innate and adaptive immune systems through acute, transient, and long-term adaptations to physical activity in a dose-response relationship. Functional foods prevention of non-communicable disease can be translated into protecting against respiratory viral infections and COVID-19. Functional foods and nutraceuticals within popular diets contain immune-boosting nutraceuticals, polyphenols, terpenoids, flavonoids, alkaloids, sterols, pigments, unsaturated fatty-acids, micronutrient vitamins and minerals, including vitamin A, B6, B12, C, D, E, and folate, and trace elements, including zinc, iron, selenium, magnesium, and copper. Foods with antiviral properties include fruits, vegetables, fermented foods and probiotics, olive oil, fish, nuts and seeds, herbs, roots, fungi, amino acids, peptides, and cyclotides. Regular moderate exercise may contribute to reduce viral risk and enhance sleep quality during quarantine, in combination with appropriate dietary habits and functional foods. Lifestyle and appropriate nutrition with functional compounds may offer further antiviral approaches for public health.'
-  ## Abstract, Summary oder Background der Studie – bitte die einfachen Anführungszeichen beachten!
-  ##
   tags:     [functional food, lifestyle prevention, exercise, COVID-19, viral infection, immune system]
-  ## Keywords bitte mit Kommata trennen.
-  ##
 de: 
-## Deutsche DeepL-Übersetzung, siehe www.deepl.com.
-##
   subtitle:    'Antivirale funktionelle Lebensmittel und sportlicher Lebensstil - Prävention des Coronavirus'
-##
   description: 'Das neuartige Coronavirus (COVID-19) verursacht weltweit hohe Sterblichkeits- und Schließungsraten. Ein geschwächtes Immunsystem ist ein bekannter Risikofaktor für alle viralen Grippeinfektionen. Funktionelle Lebensmittel optimieren die Fähigkeit des Immunsystems, pathogenen Virusinfektionen vorzubeugen und sie zu bekämpfen, während körperliche Aktivität diese Schutzwirkung verstärkt. Bewegung verbessert das angeborene und adaptive Immunsystem durch akute, vorübergehende und langfristige Anpassungen an körperliche Aktivität in einer Dosis-Wirkungs-Beziehung. Die Prävention nicht übertragbarer Krankheiten durch funktionelle Lebensmittel lässt sich auf den Schutz vor viralen Infektionen der Atemwege und COVID-19 übertragen. Funktionelle Lebensmittel und Nutrazeutika in der gängigen Ernährung enthalten immunstärkende Nutrazeutika, Polyphenole, Terpenoide, Flavonoide, Alkaloide, Sterole, Pigmente, ungesättigte Fettsäuren, Mikronährstoffvitamine und -mineralien, einschließlich Vitamin A, B6, B12, C, D, E und Folsäure, sowie Spurenelemente, einschließlich Zink, Eisen, Selen, Magnesium und Kupfer. Zu den Lebensmitteln mit antiviralen Eigenschaften gehören Obst, Gemüse, fermentierte Lebensmittel und Probiotika, Olivenöl, Fisch, Nüsse und Samen, Kräuter, Wurzeln, Pilze, Aminosäuren, Peptide und Zyklotide. Regelmäßige moderate Bewegung kann dazu beitragen, das virale Risiko zu verringern und die Schlafqualität während der Quarantäne zu verbessern, in Kombination mit geeigneten Ernährungsgewohnheiten und funktionellen Lebensmitteln. Der Lebensstil und eine angemessene Ernährung mit funktionellen Stoffen können weitere antivirale Ansätze für die öffentliche Gesundheit bieten.'
-  tags:     [Functional Food, Lebensstilprävention, Bewegung, COVID-19, Virusinfektion, Immunsystem]
+  tags:     [Funktionelle Lebensmittel, Lebensstilprävention, Bewegung, COVID-19, Virusinfektion, Immunsystem]
 group:       "Treatments"
-## Kategorie der Studie: Virus, Immunity, Therapeutics, Vaccines – bitte die Anführungszeichen beachten!
-##
 credit:      https://doi.org/10.3390/nu12092633
-## Link zur Studien-Website.
-## Link zum PDF.
-##
-## Der Dateinamen setzt sich aus Datum, Titel der Publikation, DOI-ID der Studie (nach dem letzten Slash) und der Dateiendung zusammen. Bitte den Unterstrich vor der DOI-ID beachten!
-##
-## 2020-09-30-nature-immunology_s41590-020-00808-x.md
-##
 ---
-<object data="{{ page.link }}" style='height:calc(100vh - 400px); width: 100%' type='application/pdf'></object>
