--- a/_studies/2020-06-25_10.1002_rmv.2119.md
+++ b/_studies/2020-06-25_10.1002_rmv.2119.md
@@ -1,45 +1,16 @@
 ---
 date:        2020-06-25
-## Das Datum der Studienveröffentlichung im Format JJJJ-MM-TT.
-##
 title:       Reviews in Medical Virology
-## Titel der Publikation, beispielweise The Lancet.
-##
-authors:      'Malek Mahdavi, A'
-## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
-##
-status:       default
-## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
-##
+authors:     'Malek Mahdavi, A'
+status:      default
 en:
   subtitle:    'A brief review of interplay between vitamin D and angiotensin‐converting enzyme 2: Implications for a potential treatment for COVID‐19'
-  ## Titel der Studie – bitte die einfachen Anführungszeichen beachten!
-  ##
   description: 'The novel coronavirus disease 2019 (COVID‐19) is rapidly expanding and causing many deaths all over the world with the World Health Organization (WHO) declaring a pandemic in March 2020. Current therapeutic options are limited and there is no registered and/or definite treatment or vaccine for this disease or the causative infection, severe acute respiratory coronavirus 2 syndrome (SARS‐CoV‐2). Angiotensin‐converting enzyme 2 (ACE2), a part of the renin‐angiotensin system (RAS), serves as the major entry point into cells for SARS‐CoV‐2 which attaches to human ACE2, thereby reducing the expression of ACE2 and causing lung injury and pneumonia. Vitamin D, a fat‐soluble‐vitamin, is a negative endocrine RAS modulator and inhibits renin expression and generation. It can induce ACE2/Ang‐(1‐7)/MasR axis activity and inhibits renin and the ACE/Ang II/AT1R axis, thereby increasing expression and concentration of ACE2, MasR and Ang‐(1‐7) and having a potential protective role against acute lung injury (ALI)/acute respiratory distress syndrome (ARDS). Therefore, targeting the unbalanced RAS and ACE2 down‐regulation with vitamin D in SARS‐CoV‐2 infection is a potential therapeutic approach to combat COVID‐19 and induced ARDS.'
-  ## Abstract, Summary oder Background der Studie – bitte die einfachen Anführungszeichen b
-  ##
   tags:     [angiotensin‐converting enzyme 2, COVID‐19, vitamin D]
-  ## Keywords bitte mit Kommata trennen.
-  ##
 de: 
-## Deutsche DeepL-Übersetzung, siehe www.deepl.com.
-##
   subtitle:    'Ein kurzer Überblick über das Zusammenspiel von Vitamin D und Angiotensin-konvertierendem Enzym 2: Implikationen für eine mögliche Behandlung von COVID-19'
-##
   description: 'Die neuartige Coronavirus-Krankheit 2019 (COVID-19) breitet sich rasch aus und verursacht viele Todesfälle in der ganzen Welt, wobei die Weltgesundheitsorganisation (WHO) im März 2020 eine Pandemie ausruft. Die derzeitigen therapeutischen Möglichkeiten sind begrenzt, und es gibt keine zugelassene und/oder definitive Behandlung oder Impfung für diese Krankheit oder die verursachende Infektion, das schwere akute respiratorische Coronavirus-2-Syndrom (SARS-CoV-2). Das Angiotensin-konvertierende Enzym 2 (ACE2), ein Teil des Renin-Angiotensin-Systems (RAS), dient als Haupteintrittspforte in die Zellen für das SARS-CoV-2, das sich an das menschliche ACE2 anheftet, wodurch die Expression von ACE2 verringert und Lungenschäden und Lungenentzündungen verursacht werden. Vitamin D, ein fettlösliches Vitamin, ist ein negativer endokriner RAS-Modulator und hemmt die Expression und Bildung von Renin. Es kann die Aktivität der ACE2/Ang-(1-7)/MasR-Achse induzieren und hemmt Renin und die ACE/Ang II/AT1R-Achse, wodurch es die Expression und Konzentration von ACE2, MasR und Ang-(1-7) erhöht und eine potenziell schützende Rolle bei akuter Lungenverletzung (ALI)/akutem Atemnotsyndrom (ARDS) spielt. Daher ist die gezielte Beeinflussung der unausgewogenen RAS- und ACE2-Down-Regulation mit Vitamin D bei SARS-CoV-2-Infektionen ein potenzieller therapeutischer Ansatz zur Bekämpfung von COVID-19 und induziertem ARDS.'
-##
-  tags:     [Angiotensin-konvertierendes Enzym 2, ACE2, COVID-19, Vitamin D]
-##
+  tags:     [Angiotensin konvertierendes Enzym 2 (ACE2), COVID-19, Vitamin D]
 group:       "Treatments"
-## Kategorie der Studie: Virus, Immunity, Therapeutics, Vaccines – bitte die Anführungszeichen beachten!
-##
 credit:       https://doi.org/10.1002/rmv.2119
-## Link zur Studien-Website.
-##
-##
-## Der Dateinamen setzt sich aus Datum, Titel der Publikation, DOI-ID der Studie (nach dem letzten Slash) und der Dateiendung zusammen. Bitte den Unterstrich vor der DOI-ID beachten!
-##
-## 2020-09-30-nature-immunology_s41590-020-00808-x.md
-##
 ---
-<object data="{{ page.link }}" style='height:calc(100vh - 400px); width: 100%' type='application/pdf'></object>
