--- a/_studies/2021-05-16_10.3390_ijms22105251.md
+++ b/_studies/2021-05-16_10.3390_ijms22105251.md
@@ -1,38 +1,16 @@
 ---
 date:        2021-05-16
-## Das Datum der Studienveröffentlichung im Format JJJJ-MM-TT.
-##
 title:       International Journal of Molecular Sciences
-## Titel der Publikation, beispielweise The Lancet.
-##
-authors:      'Peng, M-Y, Liu, W-C, Zheng, J-Q, et al.'
-## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
-status:         default
-##
+authors:     'Peng, M-Y, Liu, W-C, Zheng, J-Q, et al.'
+status:      default
 en:
   subtitle:    'Immunological Aspects of SARS-CoV-2 Infection and the Putative Beneficial Role of Vitamin-D'
-  ## Titel der Studie – bitte die einfachen Anführungszeichen beachten!
-  ##
   description: 'Coronavirus disease 2019 (COVID-19), caused by severe acute respiratory syndrome coronavirus-2 (SARS-CoV-2) is still an ongoing global health crisis. Immediately after the inhalation of SARS-CoV-2 viral particles, alveolar type II epithelial cells harbor and initiate local innate immunity. These particles can infect circulating macrophages, which then present the coronavirus antigens to T cells. Subsequently, the activation and differentiation of various types of T cells, as well as uncontrollable cytokine release (also known as cytokine storms), result in tissue destruction and amplification of the immune response. Vitamin D enhances the innate immunity required for combating COVID-19 by activating toll-like receptor 2. It also enhances antimicrobial peptide synthesis, such as through the promotion of the expression and secretion of cathelicidin and β-defensin; promotes autophagy through autophagosome formation; and increases the synthesis of lysosomal degradation enzymes within macrophages. Regarding adaptive immunity, vitamin D enhances CD4+ T cells, suppresses T helper 17 cells, and promotes the production of virus-specific antibodies by activating T cell-dependent B cells. Moreover, vitamin D attenuates the release of pro-inflammatory cytokines by CD4+ T cells through nuclear factor κB signaling, thereby inhibiting the development of a cytokine storm. SARS-CoV-2 enters cells after its spike proteins are bound to angiotensin-converting enzyme 2 (ACE2) receptors. Vitamin D increases the bioavailability and expression of ACE2, which may be responsible for trapping and inactivating the virus. Activation of the renin-angiotensin-aldosterone system (RAS) is responsible for tissue destruction, inflammation, and organ failure related to SARS-CoV-2. Vitamin D inhibits renin expression and serves as a negative RAS regulator. In conclusion, vitamin D defends the body against SARS-CoV-2 through a novel complex mechanism that operates through interactions between the activation of both innate and adaptive immunity, ACE2 expression, and inhibition of the RAS system. Multiple observation studies have shown that serum concentrations of 25 hydroxyvitamin D are inversely correlated with the incidence or severity of COVID-19. The evidence gathered thus far, generally meets Hill’s causality criteria in a biological system, although experimental verification is not sufficient. We speculated that adequate vitamin D supplementation may be essential for mitigating the progression and severity of COVID-19. Future studies are warranted to determine the dosage and effectiveness of vitamin D supplementation among different populations of individuals with COVID-19.'
-  ## Abstract, Summary oder Background der Studie – bitte die einfachen Anführungszeichen beachten!
   tags: [coronavirus disease 2019, severe acute respiratory syndrome coronavirus 2, vitamin D, adaptive immunity, innate immunity, angiotensin-converting enzyme 2, renin–angiotensin–aldosterone system]
-  ##
 de: 
-## Deutsche DeepL-Übersetzung, siehe www.deepl.com.
-##
   subtitle:    'Immunologische Aspekte der SARS-CoV-2-Infektion und die vermutete positive Rolle von Vitamin D'
-  ##
   description: 'Die Coronavirus-Krankheit 2019 (COVID-19), verursacht durch das schwere akute respiratorische Syndrom Coronavirus-2 (SARS-CoV-2), ist nach wie vor eine globale Gesundheitskrise. Unmittelbar nach dem Einatmen von SARS-CoV-2-Viruspartikeln beherbergen Epithelzellen des alveolären Typs II lokale angeborene Immunität und initiieren diese. Diese Partikel können zirkulierende Makrophagen infizieren, die dann die Coronavirus-Antigene den T-Zellen präsentieren. In der Folge führen die Aktivierung und Differenzierung verschiedener Arten von T-Zellen sowie die unkontrollierte Freisetzung von Zytokinen (auch als Zytokinstürme bezeichnet) zur Zerstörung von Gewebe und zur Verstärkung der Immunreaktion. Vitamin D stärkt die angeborene Immunität, die zur Bekämpfung von COVID-19 erforderlich ist, indem es den Toll-like-Rezeptor 2 aktiviert. Es steigert auch die antimikrobielle Peptidsynthese, z. B. durch die Förderung der Expression und Sekretion von Cathelicidin und β-Defensin; es fördert die Autophagie durch die Bildung von Autophagosomen und steigert die Synthese von lysosomalen Abbauenzymen in Makrophagen. Was die adaptive Immunität betrifft, so verstärkt Vitamin D die CD4+ T-Zellen, unterdrückt die T-Helferzellen und fördert die Produktion von virusspezifischen Antikörpern durch die Aktivierung von T-Zell-abhängigen B-Zellen. Darüber hinaus dämpft Vitamin D die Freisetzung proinflammatorischer Zytokine durch CD4+ T-Zellen über den Nuklearfaktor κB und verhindert so die Entwicklung eines Zytokinsturms. SARS-CoV-2 dringt in Zellen ein, nachdem seine Spike-Proteine an Angiotensin-Converting-Enzyme-2 (ACE2)-Rezeptoren gebunden sind. Vitamin D erhöht die Bioverfügbarkeit und Expression von ACE2, das möglicherweise für das Abfangen und Inaktivieren des Virus verantwortlich ist. Die Aktivierung des Renin-Angiotensin-Aldosteron-Systems (RAS) ist für die Gewebezerstörung, die Entzündung und das Organversagen im Zusammenhang mit SARS-CoV-2 verantwortlich. Vitamin D hemmt die Renin-Expression und dient als negativer RAS-Regulator. Zusammenfassend lässt sich sagen, dass Vitamin D den Körper durch einen neuartigen komplexen Mechanismus gegen SARS-CoV-2 schützt, der durch Wechselwirkungen zwischen der Aktivierung der angeborenen und der adaptiven Immunität, der ACE2-Expression und der Hemmung des RAS-Systems funktioniert. Mehrere Beobachtungsstudien haben gezeigt, dass die Serumkonzentration von 25-Hydroxyvitamin D umgekehrt mit dem Auftreten oder dem Schweregrad von COVID-19 korreliert ist. Die bisher gesammelten Beweise erfüllen im Allgemeinen die Hill’schen Kausalitätskriterien in einem biologischen System, obwohl die experimentelle Überprüfung nicht ausreichend ist. Wir vermuten, dass eine angemessene Vitamin-D-Supplementierung für die Milderung des Fortschreitens und des Schweregrads von COVID-19 von wesentlicher Bedeutung sein könnte. Künftige Studien sind erforderlich, um die Dosierung und Wirksamkeit einer Vitamin-D-Supplementierung in verschiedenen Populationen von Personen mit COVID-19 zu bestimmen.'
-  tags: [Coronavirus-Krankheit 2019, Schweres Akutes Respiratorisches Syndrom Coronavirus 2, Vitamin D, adaptive Immunität, angeborene Immunität, Angiotensin-Converting-Enzym 2, Renin-Angiotensin-Aldosteron-System]
+  tags: [Coronavirus-Krankheit 2019, Schweres Akutes Respiratorisches Syndrom Coronavirus 2, Vitamin D, adaptive Immunität, angeborene Immunität, Angiotensin konvertierendes Enzym 2 (ACE2), Renin-Angiotensin-Aldosteron-System]
 group:       "Treatments"
-## Kategorie der Studie: Virus, Immunity, Therapeutics, Vaccines – bitte die Anführungszeichen beachten!
-##
 credit:   https://doi.org/10.3390/ijms22105251
-## Link zur Studien-Website.
-##
-## Der Dateinamen setzt sich aus Datum, Titel der Publikation, DOI-ID der Studie (nach dem letzten Slash) und der Dateiendung zusammen. Bitte den Unterstrich vor der DOI-ID beachten!
-##
-## 2020-09-30-nature-immunology_s41590-020-00808-x.md
-##
 ---
-<object data="{{ page.link }}" style='height:calc(100vh - 400px); width: 100%' type='application/pdf'></object>
