--- a/_studies/2021-11-05_10.1007_s00011-021-01510-w.md
+++ b/_studies/2021-11-05_10.1007_s00011-021-01510-w.md
@@ -10,7 +10,7 @@ en:
 de: 
   subtitle:    'Interaktionen zwischen Darmmikrobiom, Vitamin D und ACE2 sind kritische Faktoren bei der Immunseneszenz und Entzündung: Schlüssel für die Impfstoffreaktion und den Schweregrad der COVID-19-Infektion'
   description: 'Die SARS-CoV-2-Pandemie breitet sich weiterhin sporadisch in den Vereinigten Staaten und weltweit aus.  Schweregrad und Sterblichkeit betrafen vor allem gebrechliche ältere Menschen mit Vorerkrankungen. Hinweise mehren sich, dass die Wechselwirkungen zwischen dem Darmmikrobiom, Vitamin D und dem RAS/ACE2-System für ein ausgewogenes Funktionieren des Immunsystems älterer Menschen und für die Regulierung von Entzündungen von wesentlicher Bedeutung sind. In dieser Übersichtsarbeit stellen wir die Hypothese auf, dass der Zustand des Darmmikrobioms vor der Infektion den Ausgang der COVID-19-Sepsis bestimmt und auch ein kritischer Faktor für den Impferfolg sein könnte. Artikel aus PubMed/Medline-Recherchen wurden mit einer Kombination der Begriffe "SARS-CoV-2, COVID-19, Entzündung, Immun-Seneszenz, Darmmikrobiom, Vitamin D, RAS/ACE2, Impfung" überprüft. Hinweise auf einen komplexen Zusammenhang zwischen dem Darmmikrobiom, der ACE-2-Expression und Vitamin D beim Schweregrad von COVID-19 existieren. Der Status des Darmmikrobioms ist in hohem Maße prädiktiv für die molekularen Signaturen und Entzündungsmarker im Blut sowie für die Reaktionen des Wirts auf Infektionen. Vitamin D hat eine immunmodulatorische Funktion bei der angeborenen und adaptiven Immunantwort auf virale Infektionen. Zu den entzündungshemmenden Funktionen von Vitamin D gehören die Regulierung des Darmmikrobioms und die Erhaltung der mikrobiellen Vielfalt. Es fördert das Wachstum darmfreundlicher kommensaler Stämme von Bifida- und Fermicutus-Arten. Darüber hinaus ist Vitamin D ein negativer Regulator für die Expression von Renin und interagiert mit der RAS/ACE/ACE-2-Signalachse. Zusammengenommen könnte dieser Dreiklang das entscheidende Bindeglied bei der Bestimmung des Ausgangs einer SARS-CoV-2-Infektion sein. Die vorgestellten Daten sind empirisch und informativ. Weitere Forschungen unter Verwendung fortschrittlicher systembiologischer Techniken und einer durch künstliche Intelligenz unterstützten Integration könnten dazu beitragen, das Darmmikrobiom mit Sepsis und Impfstoffreaktionen in Beziehung zu setzen. Die Modulation dieser Faktoren könnte den Erfolg von Impfstoffen und klinischen Ergebnissen bei COVID-19-Infektionen beeinflussen.'
-  tags:   [COVID-19 Sepsis, Darm-Mikrobiom, Vitamin D, ACE2 Immun-Seneszenz, Entzündungen, Impfung]
+  tags:   [COVID-19 Sepsis, Darm-Mikrobiom, Vitamin D, ACE2 Immun-Seneszenz, Entzündung, Impfung]
 group:       "Treatments"
 credit:      https://doi.org/10.1007/s00011-021-01510-w
 ---
