--- a/_studies/2021-12-31__10.4236_***.2022.****.md
+++ b/_studies/2021-12-31__10.4236_***.2022.****.md
@@ -1,7 +1,7 @@
 ---
-date: 2021-12-31
+date:     2021-12-31
 title:    Open Access Library Journal  
-authors: 'Chambers, PW'
+authors:  'Chambers, PW'
 status:   Preprint
 en:
   subtitle:   'COVID-19: From Cough to Coffin'
@@ -10,7 +10,7 @@ en:
 de: 
   subtitle:   'COVID-19: Vom Husten zum Sarg'
   description: 'Die wichtigsten Determinanten für den Schweregrad der Covidose sind der ACE-Genotyp, das Falciparum-Antigen (CD147) und der Vitamin-D-Status.  Insbesondere die I- (Insertion) und D-Allele (Deletion), ACE-Polymorphismen, bestimmen das Gleichgewicht zwischen dem RAS (Renin-Angiotensin-System) und dem KKS (Kallikrein-Kinin-System) bei der Reaktion auf SARS CoV2 (SARS2). CD147, das Falciparum-Antigen, vermittelt den Schaden.  Vitamin D moduliert die Immunantwort.  Das RAS und das KKS stellen eine Verbindung zwischen Covid-19 und der Kawasaki-Krankheit (KD) und dem Toxischen Schocksyndrom (TSS) her. Die Pathogenese von Covid 19 ist Gegenstand einer Debatte über Veranlagung und Vererbung, da es offenbar vor allem farbige Menschen betrifft, es sei denn, sie leben in Afrika südlich der Sahara. Für Letzteres gibt es nur drei plausible Erklärungen, die alle von der Schulmedizin selektiv ignoriert/unterdrückt werden. Dieser Artikel befasst sich mit der genotypischen Natur von Covid-19. Angiotensin II, Bradykinin, ACE2, ACE und seine beiden polymorphen Allele spielen eine wichtige Rolle.  Sie sagen den Schweregrad der Erkrankung voraus.  Sie sagen die ARDS-Varianten voraus. Sie deuten auf eine zusätzliche Lungenerkrankung hin oder nicht. Das stark glykosylierte CD147-Epitop auf dem Spike-Protein S ist der Schlüssel. Es wurde in mangelhaften Studien als nicht existent abgetan.  Seine Interaktion mit CD147-Rezeptoren auf Erythrozyten und T-Lymphozyten kann jedoch nicht geleugnet werden und ist der Kern des Myokarditis-Rätsels. Mit Hilfe dieses Schlüssels lassen sich mehrere Punkte miteinander verbinden, und es wird ein roter Alarm ausgelöst, unabhängig davon, ob es sich um Covid19 oder einen Impfstoff handelt.  Dazu gehören Thrombose, Immunschwäche, Krebsentwicklung, Autoimmunerkrankungen und ADE (Antibody Dependent Enhancement) bei Risikopersonen. Bei empfänglichen Geimpften werden die schädlichen Auswirkungen beschleunigt.  Die Bewertung dieses Phänomens und präventive Ansätze werden untersucht.'
-  tags:     [COVID-19, Vitamin D, CD147, CD8, Lektin, Glykan, Epitop, Angioödem]
+  tags:     [COVID-19, Vitamin D, CD147, CD8, Lektin, Glykan, Epitope, Angioödem]
 group:  "Treatments"
 credit:      https://www.researchgate.net/publication/357322671_COVID-19_From_Cough_to_Coffin
 ---
