--- a/_studies/2022-01-25_10.51793_OS.2022.25.1.002.md
+++ b/_studies/2022-01-25_10.51793_OS.2022.25.1.002.md
@@ -1,32 +1,16 @@
 ---
-date: 2022-01-25
-##
+date:     2022-01-25
 title:    Lechaschi Vrach 
-## Titel der Publikation, beispielweise The Lancet.
-##
-authors: 'Rusnak, FI'
-##
+authors:  'Rusnak, FI'
 status:   default
-##
 en:
   subtitle:   'Vitamins D, C and COVID-19'
-  ##
   description: 'In the absence of effective treatment for COVID- 19, various drugs were empirically used. Contradictory literature data, from adherents to complete denial of the use of vitamins D and C in COVID-19,  prompted us to analyze the literature data and express our opinion on this issue. In our country and abroad, many medical centers include vitamins D and C in the therapy of a new coronavirus infection. Almost all organs and systems of our body have receptors for vitamin D. This fact indicates the active participation of vitamin D in protecting against infection, allergies, and prolonging human life. People with vitamin D deficiency are more likely to have respiratory infections, anemia, muscle hypotension, and bone fragility. The use of vitamin D in coronavirus infection is effective with daily intake of physiological doses of vitamin D. Compensation for vitamin D deficiency is important for the activation of interferon-dependent antiviral immunity, and for the prevention of «cytokine storm», normalization of the coagulation system, and for the reduction of chronic inf lammation in the presence of concomitant chronic pathologies in the patient. Even the transition from a severe deficiency of vitamin D (25(OH)D < 20 ng/ml) to a moderate deficiency of 25(OH)D (a metabolite of vitamin D, which is used to judge its supply of the body) in the range of 20-30 ng/ml, in Reduces the risk of admission of a patient with pneumonia to the intensive care unit by 3 times and the risk of transfer to mechanical ventilation by 11 times. The use of vitamin C in coronavirus infection is effective by compensating for its existing deficiency and by interacting with other vitamins. An effective way to maintain the level of vitamins D and C in the population is to fortify these vitamins and other nutrients in foods of mass consumption, as well as to take vitamins in other forms. Multivitamins produced in Western countries are mainly designed for people living in these territories, taking into account the common method of fortifying food. For our country, the norms of consumption of vitamins have been substantiated, confirmed by massive studies of the population of different regions. '
-  ## 
   tags:    [COVID-19, vitamin D, vitamin C, vitamins]
-## 
 de: 
-  ##
   subtitle:   'Vitamine D, C und COVID-19'
-  ##
   description: 'In Ermangelung einer wirksamen Behandlung für COVID-19 wurden verschiedene Medikamente empirisch eingesetzt. Widersprüchliche Angaben in der Literatur, von Befürwortern bis hin zur völligen Ablehnung der Verwendung der Vitamine D und C bei COVID-19, veranlassten uns, die Literaturdaten zu analysieren und unsere Meinung zu diesem Thema zu äußern. In unserem Land und im Ausland beziehen viele medizinische Zentren die Vitamine D und C in die Therapie einer neuen Coronavirus-Infektion ein. Fast alle Organe und Systeme unseres Körpers haben Rezeptoren für Vitamin D. Diese Tatsache weist auf die aktive Beteiligung von Vitamin D am Schutz vor Infektionen und Allergien sowie an der Verlängerung des menschlichen Lebens hin. Menschen mit Vitamin-D-Mangel haben ein höheres Risiko für Infektionen der Atemwege, Anämie, Muskelhypotonie und Knochenbrüchigkeit. Der Ausgleich des Vitamin-D-Mangels ist wichtig für die Aktivierung der interferonabhängigen antiviralen Immunität und für die Verhinderung eines "Zytokinsturms", die Normalisierung des Gerinnungssystems und die Verringerung der chronischen Entzündung bei gleichzeitigen chronischen Erkrankungen des Patienten. Selbst der Übergang von einem schweren Vitamin-D-Mangel (25(OH)D < 20 ng/ml) zu einem mäßigen Mangel an 25(OH)D (ein Metabolit von Vitamin D, der zur Beurteilung seiner Versorgung des Körpers herangezogen wird) im Bereich von 20-30 ng/ml verringert das Risiko der Einweisung eines Patienten mit Lungenentzündung auf die Intensivstation um das Dreifache und das Risiko der Verlegung auf eine mechanische Beatmung um das Elffache. Der Einsatz von Vitamin C bei einer Coronavirus-Infektion ist wirksam, da es den bestehenden Mangel ausgleicht und mit anderen Vitaminen interagiert. Eine wirksame Methode zur Aufrechterhaltung des Vitamin-D- und Vitamin-C-Spiegels in der Bevölkerung besteht in der Anreicherung dieser Vitamine und anderer Nährstoffe in Lebensmitteln des Massenkonsums sowie in der Einnahme von Vitaminen in anderen Formen. Die in den westlichen Ländern hergestellten Multivitaminpräparate sind in erster Linie für die dort lebenden Menschen bestimmt, wobei die dort übliche Methode der Anreicherung von Lebensmitteln berücksichtigt wird. Für unser Land wurden die Normen für den Vitaminkonsum durch umfangreiche Untersuchungen der Bevölkerung in verschiedenen Regionen bestätigt.'
-  ## 
-  ##
-  tags:     [COVID-19, vitamin D, Vitamin C, Vitamine]
-##
+  tags:     [COVID-19, Vitamin D, Vitamin C, Vitamine]
 group:  "Treatments"
-##
 credit:      https://journal.lvrach.ru/jour/article/download/867/853
-##
-## 2020-09-30_10.1038_s41590-020-00808-x.md
 ---
