--- a/_studies/2021-01-19_10.1002_JLB.4COVR1020-698R.md
+++ b/_studies/2021-01-19_10.1002_JLB.4COVR1020-698R.md
@@ -1,8 +1,8 @@
 ---
 date:        2021-01-19
 title:       Journal of Leukocyte Biologyy 
-authors:      'Verma, S, Chaturvedi, V, Ganguly, NK, et al.'
-status:     default
+authors:     'Verma, S, Chaturvedi, V, Ganguly, NK, et al.'
+status:      default
 en:
   subtitle:    'Role of vitamin D in regulating COVID-19 severity—An immunological perspective'
   description: 'Vitamin D, a key nutrient/prohormone classically associated with skeletal health, is also an important immunomodulator, with pleotropic effects on innate and adaptive immune cells. Outcomes of several chronic, autoimmune, and infectious diseases are linked to vitamin D. Emergent correlations of vitamin D insufficiency with coronavirus-induced disease 2019 (COVID-19) severity, alongside empirical and clinical evidence of immunoregulation by vitamin D in other pulmonary diseases, have prompted proposals of vitamin D supplementation to curb the COVID-19 public health toll. In this review paper, we engage an immunological lens to discuss potential mechanisms by which vitamin D signals might regulate respiratory disease severity in severe acute respiratory syndrome coronavirus 2 (SARS-CoV2) infections, vis a vis other pulmonary infections. It is proposed that vitamin D signals temper lung inflammatory cascades during SARS-CoV2 infection, and insufficiency of vitamin D causes increased inflammatory cytokine storm, thus leading to exacerbated respiratory disease. Additionally, analogous to studies of reduced cancer incidence, the dosage of vitamin D compounds administered to patients near the upper limit of safety may serve to maximize immune health benefits and mitigate inflammation and disease severity in SARS-CoV2 infections. We further deliberate on the importance of statistically powered clinical correlative and interventional studies, and the need for in-depth basic research into vitamin D-dependent host determinants of respiratory disease severity.'
@@ -10,7 +10,7 @@ en:
 de: 
   subtitle:    'Die Rolle von Vitamin D bei der Regulierung des Schweregrads von COVID-19 - eine immunologische Perspektive'
   description: 'Vitamin D, ein Schlüsselnährstoff/Prohormon, der klassischerweise mit der Gesundheit des Skeletts in Verbindung gebracht wird, ist auch ein wichtiger Immunmodulator mit pleotropen Wirkungen auf angeborene und adaptive Immunzellen. Die sich abzeichnenden Korrelationen zwischen Vitamin-D-Insuffizienz und dem Schweregrad der Coronavirus-induzierten Erkrankung 2019 (COVID-19) sowie empirische und klinische Belege für die Immunregulation durch Vitamin D bei anderen Lungenerkrankungen haben dazu geführt, dass eine Vitamin-D-Supplementierung vorgeschlagen wurde, um die COVID-19-Krankheit einzudämmen. In dieser Übersichtsarbeit diskutieren wir aus immunologischer Sicht mögliche Mechanismen, durch die Vitamin-D-Signale den Schweregrad der Atemwegserkrankung bei Infektionen mit dem schweren akuten respiratorischen Syndrom Coronavirus 2 (SARS-CoV2) im Vergleich zu anderen Lungeninfektionen regulieren könnten. Vorgeschlagen wird, dass Vitamin-D-Signale die Entzündungskaskaden in der Lunge während einer SARS-CoV2-Infektion regulieren und dass ein Vitamin-D-Mangel zu einem verstärkten Entzündungszytokinsturm und damit zu einer Verschlimmerung der Atemwegserkrankung führt. Ähnlich wie bei Studien zur Verringerung der Krebsinzidenz kann die Dosierung von Vitamin-D-Präparaten, die den Patienten nahe der oberen Sicherheitsgrenze verabreicht werden, dazu dienen, die Vorteile für die Gesundheit des Immunsystems zu maximieren und die Entzündung und den Schweregrad der Erkrankung bei SARS-CoV2-Infektionen zu mindern. Wir weisen ferner auf die Bedeutung statistisch abgesicherter klinischer Korrelations- und Interventionsstudien sowie auf die Notwendigkeit einer eingehenden Grundlagenforschung zu den Vitamin-D-abhängigen Determinanten des Schweregrads der Atemwegserkrankung hin.'
-  tags: [COVID-19, Vitamin D, akutes Atemnotsyndrom, Coronavirus-induzierte Krankheit 2019, regulatorische T-Zellen, Vitamin-D-Rezeptor]
+  tags: [COVID-19, Vitamin D, akutes Atemnotsyndrom, Coronavirus-induzierte Krankheit 2019, regulatorische T-Zellen, Vitamin D-Rezeptor]
 group:       "Treatments"
 credit:       https://doi.org/10.1002/JLB.4COVR1020-698R
 ---
