--- a/_studies/2022-01-25-10.3390-nu14030521.md
+++ b/_studies/2022-01-25-10.3390-nu14030521.md
@@ -1,7 +1,7 @@
 ---
 date: 2022-01-25
 title:    Nutrients 
-authors: 'Dzielska'
+authors: 'Jastrzębska, J, Skalska, M, Radzimiński, Ł, et al.'
 status:   default
 en:
   subtitle:   'Changes of 25(OH)D Concentration, Bone Resorption Markers and Physical Performance as an Effect of Sun Exposure, Supplementation of Vitamin D and Lockdown among Young Soccer Players during a One-Year Training Season'
