--- a/_studies/2021-06-13_10.1016_j.nutres.2021.05.008.md
+++ b/_studies/2021-06-13_10.1016_j.nutres.2021.05.008.md
@@ -1,39 +1,16 @@
 ---
 date:        2021-06-13
-## Das Datum der Studienveröffentlichung im Format JJJJ-MM-TT.
-##
 title:       Nutrition Research
-## Titel der Publikation, beispielweise The Lancet.
-##
-authors:      'Rani, I, Goyal, A, Bhatnagar, M, et al.'
-## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
-status:     default
-##
+authors:     'Rani, I, Goyal, A, Bhatnagar, M, et al.'
+status:      default
 en:
   subtitle:    'Potential molecular mechanisms of zinc- and copper-mediated antiviral activity on COVID-19'
-  ## Titel der Studie – bitte die einfachen Anführungszeichen beachten!
-  ##
   description: 'Novel coronavirus disease 2019 (COVID-19) has spread across the globe; and surprisingly, no potentially protective or therapeutic antiviral molecules are available to treat severe acute respiratory syndrome coronavirus-2 (SARS-CoV-2) infection. However, zinc (Zn) and copper (Cu) have been shown to exert protective effects due to their antioxidant, anti-inflammatory, and antiviral properties. Therefore, it is hypothesized that supplementation with Zn and Cu alone or as an adjuvant may be beneficial with promising efficacy and a favorable safety profile to mitigate symptoms, as well as halt progression of the severe form of SARS-CoV-2 infection. The objective of this review is to discuss the proposed underlying molecular mechanisms and their implications for combating SARS-CoV-2 infection in response to Zn and Cu administration. Several clinical trials have also included the use of Zn as an adjuvant therapy with dietary regimens/antiviral drugs against COVID-19 infection. Overall, this review summarizes that nutritional intervention with Zn and Cu may offer an alternative treatment strategy by eliciting their virucidal effects through several fundamental molecular cascades, such as, modulation of immune responses, redox signaling, autophagy, and obstruction of viral entry and genome replication during SARS-CoV-2 infection.'
-  ## Abstract, Summary oder Background der Studie – bitte die einfachen Anführungszeichen beachten!
-  tags: [Zinc (Zn), Copper (Cu), Severe acute respiratory syndrome coronavirus 2, SARS-CoV-2, Coronavirus disease 2019, COVID-19, Gastrointestinal system, Trace elements]
-  ##
+  tags: [Zinc, Copper, Severe acute respiratory syndrome coronavirus 2, SARS-CoV-2, Coronavirus disease 2019, COVID-19, Gastrointestinal system, Trace elements]
 de: 
-## Deutsche DeepL-Übersetzung, siehe www.deepl.com.
-##
   subtitle:    'Mögliche molekulare Mechanismen der Zink- und Kupfer-vermittelten antiviralen Aktivität auf COVID-19'
-  ##
   description: 'Die neuartige Coronavirus-Krankheit 2019 (COVID-19) hat sich weltweit ausgebreitet, und überraschenderweise gibt es keine potenziell schützenden oder therapeutischen antiviralen Moleküle zur Behandlung der Infektion mit dem schweren akuten respiratorischen Syndrom Coronavirus-2 (SARS-CoV-2). Jedoch hat sich gezeigt, dass Zink (Zn) und Kupfer (Cu) aufgrund ihrer antioxidativen, entzündungshemmenden und antiviralen Eigenschaften eine schützende Wirkung ausüben. Daher stellen wir die Hypothese auf, dass eine Supplementierung mit Zn und Cu allein oder als Adjuvans eine vielversprechende Wirksamkeit und ein günstiges Sicherheitsprofil aufweisen könnte, um die Symptome zu lindern und das Fortschreiten der schweren Form der SARS-CoV-2-Infektion aufzuhalten. Ziel dieser Übersichtsarbeit ist, die vorgeschlagenen zugrunde liegenden molekularen Mechanismen und ihre Auswirkungen auf die Bekämpfung der SARS-CoV-2-Infektion als Reaktion auf die Verabreichung von Zn und Cu zu diskutieren. In mehreren klinischen Studien wurde auch die Verwendung von Zn als adjuvante Therapie mit diätetischen Maßnahmen/antiviralen Medikamenten gegen COVID-19-Infektionen untersucht. Insgesamt fasst diese Übersicht zusammen, dass eine Ernährungsintervention mit Zn und Cu eine alternative Behandlungsstrategie darstellen könnte, indem sie ihre viruziden Wirkungen über mehrere grundlegende molekulare Kaskaden auslöst, wie z. B. die Modulation von Immunantworten, Redox-Signalen, Autophagie und die Behinderung des viralen Eintritts und der Genomreplikation während der SARS-CoV-2-Infektion.'
-  tags: [Zink (Zn), Kupfer (Cu), Schweres Akutes Respiratorisches Syndrom Coronavirus 2, SARS-CoV-2, Coronavirus-Krankheit 2019, COVID-19, Gastrointestinales System, Spurenelemente]
+  tags: [Zink, Kupfer, Schweres Akutes Respiratorisches Syndrom Coronavirus 2, SARS-CoV-2, Coronavirus-Krankheit 2019, COVID-19, Gastrointestinales System, Spurenelemente]
 group:       "Treatments"
-## Kategorie der Studie: Virus, Immunity, Therapeutics, Vaccines – bitte die Anführungszeichen beachten!
-##
 credit:     https://doi.org/10.1016/j.nutres.2021.05.008
-## Link zur Studien-Website.
-##
-##
-## Der Dateinamen setzt sich aus Datum, Titel der Publikation, DOI-ID der Studie (nach dem letzten Slash) und der Dateiendung zusammen. Bitte den Unterstrich vor der DOI-ID beachten!
-##
-## 2020-09-30-nature-immunology_s41590-020-00808-x.md
-##
 ---
-<object data="{{ page.link }}" style='height:calc(100vh - 400px); width: 100%' type='application/pdf'></object>
