--- a/_studies/2021-01-01_10.1016_j.ijid.2020.12.077.md
+++ b/_studies/2021-01-01_10.1016_j.ijid.2020.12.077.md
@@ -1,8 +1,8 @@
 ---
 date:        2021-01-01
 title:       International Journal of Infectious Diseases 
-authors:      'Liu, N, Sun, J, Wang, X, et al.'
-status:         default
+authors:     'Nanyang Liu, Jiahui Sun, Xiyuan Wang, Tingting Zhang, Ming Zhao & Hao Li'
+status:      default
 en:
   subtitle:    'Low vitamin D status is associated with coronavirus disease 2019 outcomes: a systematic review and meta-analysis'
   description: 'Observational studies suggest that the risk and clinical prognosis of coronavirus disease 2019 (COVID-19) are related to low vitamin D status; however, the data are inconsistent. We conducted a systematic review and meta-analysis to assess the association between low vitamin D status and COVID-19. A systematic search was conducted with PubMed, Embase, and the Cochrane Library from database inception to September 25, 2020. The standardized mean difference (SMD) or odds ratio (OR) and corresponding 95% confidence interval (CI) was applied to estimate pooled results. Random - or fixed-effect models based on heterogeneity were used for the meta-analysis. Funnel plots and Egger regression tests were used to assess publication bias. A total of ten articles with 361,934 participants were selected for meta-analysis. Overall, the pooled OR in the fixed-effect model showed that vitamin D deficiency or insufficiency was associated with an increased risk of COVID-19 (OR = 1.43, 95% CI 1.00–2.05). In addition, COVID-19-positive individuals had lower vitamin D levels than COVID-19-negative individuals (SMD = -0.37, 95% CI = -0.52 to -0.21). Significant heterogeneity existed in both endpoints. Funnel plots and Egger regression tests revealed significant publication bias. This systematic review and meta-analysis indicated that low vitamin D status might be associated with an increased risk of COVID-19 infection. Further studies are needed to evaluate the impact of vitamin D supplementation on the clinical severity and prognosis in patients with COVID-19.'
@@ -14,4 +14,3 @@ de:
 group:       "Treatments"
 credit:      https://doi.org/10.1016/j.ijid.2020.12.077
 ---
-<object data="{{ page.link }}" style='height:calc(100vh - 400px); width: 100%' type='application/pdf'></object>
