--- a/_studies/2021-08-08_10.3390_ijms22168532.md
+++ b/_studies/2021-08-08_10.3390_ijms22168532.md
@@ -1,37 +1,15 @@
 ---
 date:        2021-08-08
-## Das Datum der Studienveröffentlichung im Format JJJJ-MM-TT.
-##
 title:       International Journal of Molecular Sciences
-## Titel der Publikation, beispielweise The Lancet.
-##
 authors:      'Schomburg, L'
-## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
-##
 en:
   subtitle:    'Selenium Deficiency Due to Diet, Pregnancy, Severe Illness, or COVID-19-A Preventable Trigger for Autoimmune Disease'
-  ## Titel der Studie – bitte die einfachen Anführungszeichen beachten!
-  ##
   description: 'The trace element selenium (Se) is an essential part of the human diet; moreover, increased health risks have been observed with Se deficiency. A sufficiently high Se status is a prerequisite for adequate immune response, and preventable endemic diseases are known from areas with Se deficiency. Biomarkers of Se status decline strongly in pregnancy, severe illness, or COVID-19, reaching critically low concentrations. Notably, these conditions are associated with an increased risk for autoimmune disease (AID). Positive effects on the immune system are observed with Se supplementation in pregnancy, autoimmune thyroid disease, and recovery from severe illness. However, some studies reported null results; the database is small, and randomized trials are sparse. The current need for research on the link between AID and Se deficiency is particularly obvious for rheumatoid arthritis and type 1 diabetes mellitus. Despite these gaps in knowledge, it seems timely to realize that severe Se deficiency may trigger AID in susceptible subjects. Improved dietary choices or supplemental Se are efficient ways to avoid severe Se deficiency, thereby decreasing AID risk and improving disease course. A personalized approach is needed in clinics and during therapy, while population-wide measures should be considered for areas with habitual low Se intake. Finland has been adding Se to its food chain for more than 35 years—a wise and commendable decision, according to today’s knowledge. It is unfortunate that the health risks of Se deficiency are often neglected, while possible side effects of Se supplementation are exaggerated, leading to disregard for this safe and promising preventive and adjuvant treatment options. This is especially true in the follow-up situations of pregnancy, severe illness, or COVID-19, where massive Se deficiencies have developed and are associated with AID risk, long-lasting health impairments, and slow recovery. '
-  ## Abstract, Summary oder Background der Studie – bitte die einfachen Anführungszeichen beachten!
-  tags: [selenium deficiency, nutrition, pregnancy, illness, COVID-19, autoimmune disease]
-  ##
+  tags: [selenium deficiency, nutrition, pregnancy, illness, COVID-19, autoimmune diseases]
 de: 
-## Deutsche DeepL-Übersetzung, siehe www.deepl.com.
-##
   subtitle:    'Selenmangel aufgrund von Ernährung, Schwangerschaft, schwerer Krankheit oder COVID-19 - ein vermeidbarer Auslöser für Autoimmunerkrankungen'
-  ##
   description: 'Das Spurenelement Selen (Se) ist ein essentieller Bestandteil der menschlichen Ernährung; darüber hinaus wurden erhöhte Gesundheitsrisiken bei Se-Mangel beobachtet. Ein ausreichend hoher Se-Status ist eine Voraussetzung für eine adäquate Immunantwort, und aus Gebieten mit Se-Mangel sind vermeidbare endemische Krankheiten bekannt. Biomarker für den Se-Status nehmen in der Schwangerschaft, bei schweren Erkrankungen oder bei COVID-19 stark ab und erreichen kritisch niedrige Konzentrationen. Diese Zustände sind mit einem erhöhten Risiko für Autoimmunkrankheiten (AID) verbunden. Positive Auswirkungen auf das Immunsystem werden bei einer Se-Supplementierung in der Schwangerschaft, bei Autoimmunerkrankungen der Schilddrüse und bei der Genesung von schweren Krankheiten beobachtet. Einige Studien berichteten jedoch über Null-Ergebnisse; die Datenbasis ist klein, und randomisierte Studien sind spärlich. Der derzeitige Forschungsbedarf über den Zusammenhang zwischen AID und Se-Mangel ist besonders bei rheumatoider Arthritis und Diabetes mellitus Typ 1 offensichtlich. Trotz dieser Wissenslücken scheint es an der Zeit zu erkennen, dass ein schwerer Se-Mangel bei anfälligen Personen AID auslösen kann. Eine verbesserte Ernährung oder die zusätzliche Gabe von Se sind wirksame Mittel zur Vermeidung eines schweren Se-Mangels, wodurch das AID-Risiko gesenkt und der Krankheitsverlauf verbessert werden kann. In den Kliniken und während der Therapie ist ein personalisierter Ansatz erforderlich, während in Gebieten mit gewohnheitsmäßig niedriger Se-Aufnahme bevölkerungsweite Maßnahmen in Betracht gezogen werden sollten. Finnland fügt seiner Nahrungskette seit mehr als 35 Jahren Se zu - nach heutigem Kenntnisstand eine kluge und lobenswerte Entscheidung. Leider werden die gesundheitlichen Risiken eines Se-Mangels oft vernachlässigt, während die möglichen Nebenwirkungen einer Se-Supplementierung übertrieben werden, was dazu führt, dass diese sichere und vielversprechende präventive und adjuvante Behandlungsmöglichkeit nicht beachtet wird. Dies gilt vor allem in den Folgesituationen von Schwangerschaft, schwerer Krankheit oder COVID-19, wo sich ein massiver Se-Mangel entwickelt hat, der mit einem AIDS-Risiko, lang anhaltenden gesundheitlichen Beeinträchtigungen und einer langsamen Genesung verbunden ist.'
-  tags: [Selenmangel, Ernährung, Schwangerschaft, Krankheit, COVID-19, Autoimmunerkrankung]
+  tags: [Selenmangel, Ernährung, Schwangerschaft, Krankheit, COVID-19, Autoimmunerkrankungen]
 group:       "Treatments"
-## Kategorie der Studie: Virus, Immunity, Therapeutics, Vaccines – bitte die Anführungszeichen beachten!
-##
 credit:       https://doi.org/10.3390/ijms22168532
-## Link zur Studien-Website.
-##
-## Der Dateinamen setzt sich aus Datum, Titel der Publikation, DOI-ID der Studie (nach dem letzten Slash) und der Dateiendung zusammen. Bitte den Unterstrich vor der DOI-ID beachten!
-##
-## 2020-09-30-nature-immunology_s41590-020-00808-x.md
-##
 ---
-<object data="{{ page.link }}" style='height:calc(100vh - 400px); width: 100%' type='application/pdf'></object>
