--- a/_studies/2022-01-21-10.3390-su14031196.md
+++ b/_studies/2022-01-21-10.3390-su14031196.md
@@ -1,6 +1,6 @@
 ---
 date: 2022-01-21
-title:    Cogent 
+title:    Sustainability 
 authors: 'El Zoghbi, A, Milanović, I, Janić, SR, et al.'
 status:   default
 en:
