--- a/_studies/2021-11-27_10.1007_s13668-021-00380-2.md
+++ b/_studies/2021-11-27_10.1007_s13668-021-00380-2.md
@@ -2,6 +2,7 @@
 date:        2021-11-27
 title:       Current Nutrition Reports
 authors:      'Antwi, J, Appiah, B, Oluwakuse, B, et al.'
+status:      default
 en:
   subtitle:    'The Nutrition-COVID-19 Interplay: a Review'
   description: 'Nutritional status is affected by the COVID-19 pandemic, directly or indirectly. Even with the recent rollout of the coronavirus disease 2019 (COVID-19) vaccines and availability of medicines such as remdesivir, and monoclonal antibodies, host nutritional status is pivotal in the fight against the acute respiratory syndrome coronavirus 2 (SARS-CoV-2) infection and outcomes. The purpose of this review is to discuss the effects of COVID-19-related lockdown on lifestyle behaviors, and the nutritional consequences, and the direct sequelae of the infection on nutrition including potential nutritional interventions. The COVID-19-related lockdown imposed radical changes in lifestyle behaviors with considerable short-term and long-term health and nutritional consequences including weight gain and obesity and increased cardiometabolic risk, consistently linked to worsened prognosis. The extent of the impact was dependent on food insecurity, overall stress and disordered eating, physical inactivity, and exposure to COVID-19-related nutrition information sources. COVID-19 could directly induce inflammatory responses and poor nutrient intake and absorption leading to undernutrition with micronutrient deficiencies, which impairs immune system function with subsequent amplified risk of infection and disease severity. Nutrition interventions through nutrition support, dietary supplementation, and home remedies such as use of zinc, selenium, vitamin D, and omega-3 fatty acids showed the most significant promise to mitigate the course of COVID-19 infection and improve survival rates. The nutrition-COVID-19 relationship and related dietary changes mimic a vicious cycle of the double burden of malnutrition, both obesity and undernutrition with micronutrient deficiencies, which promote infection, disease progression, and potential death.'
