--- a/_studies/2021-12-17_10.1016_j.isci.2021.103479.md
+++ b/_studies/2021-12-17_10.1016_j.isci.2021.103479.md
@@ -4,8 +4,8 @@ title:       iScience
 authors:     'Ndeupen, S, Qin, Z, Jacobsen, S'
 status:      default
 en:
-  subtitle:    'The mRNA-LNP platform's lipid nanoparticle component used in preclinical vaccine studies is highly inflammatory'
-  description: 'Vaccines based on mRNA-containing lipid nanoparticles (LNPs) are a promising new platform used by two leading vaccines against COVID-19. Clinical trials and ongoing vaccinations present with varying degrees of protection levels and side effects. However, the drivers of the reported side effects remain poorly defined. Here we present evidence that Acuitas' LNPs used in preclinical nucleoside-modified mRNA vaccine studies are highly inflammatory in mice. Intradermal and intramuscular injection of these LNPs led to rapid and robust inflammatory responses, characterized by massive neutrophil infiltration, activation of diverse inflammatory pathways, and production of various inflammatory cytokines and chemokines. The same dose of LNP delivered intranasally led to similar inflammatory responses in the lung and resulted in a high mortality rate, with mechanism unresolved. Thus, the mRNA-LNP platforms' potency in supporting the induction of adaptive immune responses and the observed side effects may stem from the LNPs' highly inflammatory nature.'
+  subtitle:    'The mRNA-LNP platform’s lipid nanoparticle component used in preclinical vaccine studies is highly inflammatory'
+  description: 'Vaccines based on mRNA-containing lipid nanoparticles (LNPs) are a promising new platform used by two leading vaccines against COVID-19. Clinical trials and ongoing vaccinations present with varying degrees of protection levels and side effects. However, the drivers of the reported side effects remain poorly defined. Here we present evidence that Acuitas’ LNPs used in preclinical nucleoside-modified mRNA vaccine studies are highly inflammatory in mice. Intradermal and intramuscular injection of these LNPs led to rapid and robust inflammatory responses, characterized by massive neutrophil infiltration, activation of diverse inflammatory pathways, and production of various inflammatory cytokines and chemokines. The same dose of LNP delivered intranasally led to similar inflammatory responses in the lung and resulted in a high mortality rate, with mechanism unresolved. Thus, the mRNA-LNP platforms’ potency in supporting the induction of adaptive immune responses and the observed side effects may stem from the LNPs’ highly inflammatory nature.'
   tags:     [Biological sciences, Biotechnology, Immunology]
 de: 
   subtitle:    'Die Lipid-Nanopartikel-Komponente der mRNA-LNP-Plattform, die in präklinischen Impfstoffstudien verwendet wird, ist hochgradig entzündlich'
