--- a/_studies/2021-12-01-ISSN-0976-0997.md
+++ b/_studies/2021-12-01-ISSN-0976-0997.md
@@ -12,5 +12,5 @@ de:
   description: 'Die alarmierende pandemische Situation des Ausbruchs der Coronavirus-Krankheit (COVID-19) ist auf die rasche Verbreitung des neuartigen Coronavirus (SARSCoV-2) zurückzuführen. Eine gestörte Redox-Homöostase in Verbindung mit oxidativem Stress sind wichtige biologische Prozesse, die für eine erhöhte individuelle Anfälligkeit für eine COVID-19-Infektion verantwortlich sein können. Glutathion (GSH) ist eines der wichtigsten Nicht-Protein-Antioxidantien in der Zelle, das zusammen mit verwandten Enzymen das Glutathion-System bildet. Das Glutathion-System spielt eine wichtige Rolle bei der Aufrechterhaltung der Gesundheit und der Vorbeugung von verschiedenen Krankheiten. Es gibt verschiedene Ansätze zur Verbesserung der zellulären GSH-Verfügbarkeit. Eine eingeschränkte Diät, die Verabreichung von Medikamenten und Nahrungsergänzungsmittel zeigen mäßigen Erfolg. Regelmäßige Bewegung hat sich ebenfalls als neuer Ansatz entwickelt. Es gibt Hinweise darauf, dass eine GSH- und Vitamin-D-Supplementierung das Risiko von COVID-19-Infektionen und Todesfällen verringern kann. In der vorliegenden Übersichtsarbeit wird die mögliche Rolle von Glutathion und Vitamin D bei der Vorbeugung und Verringerung des Risikos von COVID-19-assoziierten akuten Infektionen und deren Schweregrad erörtert. '
   tags:     [COVID-19, Glutathion, Vitamin D]
 group:  "Treatments"
-credit:      hhttps://www.researchgate.net/profile/Surajit-Majumder/publication/357684722_Glutathione_and_Vitamin_D_to_Prevent_COVID-19_A_Review/links/61da9933b8305f7c4b30ff5f/Glutathione-and-Vitamin-D-to-Prevent-COVID-19-A-Review.pdf
+credit:      https://www.researchgate.net/profile/Surajit-Majumder/publication/357684722_Glutathione_and_Vitamin_D_to_Prevent_COVID-19_A_Review/links/61da9933b8305f7c4b30ff5f/Glutathione-and-Vitamin-D-to-Prevent-COVID-19-A-Review.pdf
 ---
