--- a/_studies/2021-12-03_10.1155_2021_7170736.md
+++ b/_studies/2021-12-03_10.1155_2021_7170736.md
@@ -9,7 +9,7 @@ authors:      'Tallei, TE, Fatimawali, Niode, NJ, et al.'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 status:       default
-## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
+## Status der Publikation. default = default, Preprint oder Handout (Thesenpapier)
 ##
 en:
   subtitle:    'A Comprehensive Review of the Potential Use of Green Tea Polyphenols in the Management of COVID-19'
