--- a/_studies/2022-01-21_researchgate_357994624.md
+++ b/_studies/2022-01-21_researchgate_357994624.md
@@ -1,6 +1,6 @@
 ---
 date:        2022-01-21
-title:       Preprint from Researchgate 
+title:       Researchgate 
 authors:      'Seneff, S, Nigh, G, Kyriakopoulos, AM, et al'
 status:       Preprint 
 en:
