--- a/_studies/2021-10-07_10.22159_ajpcr.2021.v14i10.42399.md
+++ b/_studies/2021-10-07_10.22159_ajpcr.2021.v14i10.42399.md
@@ -9,7 +9,7 @@ authors:      'Chandrasekar, R, Sivagami, B & Satheesh Kumar, G'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 status:       default
-## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
+## Status der Publikation. default = default, Preprint oder Handout (Thesenpapier)
 ##
 en:
   subtitle:    'Potential phytoconstituents from natural products for combating against coronavirus disease-19 (severe acute respiratory syndrome coronavirus-2) - A review'
