--- a/_studies/2021-10-20_10.1016_j.bbadis.2021.166294.md
+++ b/_studies/2021-10-20_10.1016_j.bbadis.2021.166294.md
@@ -9,7 +9,7 @@ authors:      'Low, ZY, Yip, A, Lal, SK'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 status:       default
-## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
+## Status der Publikation. default = default, Preprint oder Handout (Thesenpapier)
 ##
 en:
   subtitle:    'Repositioning Ivermectin for Covid-19 treatment: Molecular mechanisms of action against SARS-CoV-2 replication'
