--- a/_studies/2021-12-10_10.24018_ejmed.2021.3.6.1131.md
+++ b/_studies/2021-12-10_10.24018_ejmed.2021.3.6.1131.md
@@ -9,7 +9,7 @@ authors:      'Putra, H, Elfrida, Yaswir, R'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 status:       default
-## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
+## Status der Publikation. default = default, Preprint oder Handout (Thesenpapier)
 ##
 en:
   subtitle:    'Vitamin D Levels among Hospitalized and Non-Hospitalized COVID-19 Patients in Dr. M. Djamil General Hospital Padang'
