--- a/_studies/2021-12-10_10.26355_eurrev_202112_27335.md
+++ b/_studies/2021-12-10_10.26355_eurrev_202112_27335.md
@@ -9,7 +9,7 @@ authors:      'Naureen, Z, Dautaj, A, Nodari, S, et al.'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 status:       default
-## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
+## Status der Publikation. default = default, Preprint oder Handout (Thesenpapier)
 ##
 en:
   subtitle:    'Proposal of a food supplement for the management of post-COVID syndrome'
