--- a/_studies/2021-12-14_10.1016_j.jviromet.2021.114418.md
+++ b/_studies/2021-12-14_10.1016_j.jviromet.2021.114418.md
@@ -9,7 +9,7 @@ authors:      'Saxena, P, Nigam, K, Mukherjee, S, et al.'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 status:       default
-## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
+## Status der Publikation. default = default, Preprint oder Handout (Thesenpapier)
 ##
 en:
   subtitle:    'Relation of Vitamin D to COVID-19'
@@ -41,4 +41,3 @@ credit:      https://doi.org/10.1016/j.jviromet.2021.114418
 ## 2020-09-30-nature-immunology_s41590-020-00808-x.md
 ##
 ---
-<object data="{{ page.link }}" style='height:calc(100vh - 400px); width: 100%' type='application/pdf'></object>
