--- a/_studies/2021-12-22_10.3389_fmolb.2021.632290.md
+++ b/_studies/2021-12-22_10.3389_fmolb.2021.632290.md
@@ -11,7 +11,7 @@ authors: 'Chiodini, I, Gatti, D, Soranna, D, et al.'
 ## Bitte beachtet, daß der Text selbst keine geraden Anführungszeichen (Schreibmaschinensatz) – ' – enthalten darf. Das ist ganz wichtig! Bitte solche Anführungszeichen je nach Bedarf mit typografischen, öffnenden oder schließenden Anführungszeichen – ’ oder ‘ – ersetzen. Das gilt für alle Texte innerhalb gerader Anführungszeichen (authors, subtitle, description).
 ##
 status:       default
-## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
+## Status der Publikation. default = default, Preprint oder Handout (Thesenpapier)
 ##
 en:
   subtitle: 'Vitamin D Status and SARS-CoV-2 Infection and COVID-19 Clinical Outcomes'
