--- a/_studies/2021-09-04_10.3389_fnut.2020.00164.md
+++ b/_studies/2021-09-04_10.3389_fnut.2020.00164.md
@@ -9,7 +9,7 @@ authors:      'Hiffler, L, Rakotoambinina, B'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 status:       default
-## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
+## Status der Publikation. default = default, Preprint oder Handout (Thesenpapier)
 ##
 en:
   subtitle:    'Selenium and RNA Virus Interactions: Potential Implications for SARS-CoV-2 Infection (COVID-19)'
