--- a/_studies/2021-02-17_10.3389_fphar.2020.586993.md
+++ b/_studies/2021-02-17_10.3389_fphar.2020.586993.md
@@ -9,7 +9,7 @@ authors:      'Omrani, M, Keshavarz, M, Ebrahimi, SN, et al.'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 status:       default
-## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
+## Status der Publikation. default = default, Preprint oder Handout (Thesenpapier)
 ##
 en:
   subtitle:    'Potential Natural Products Against Respiratory Viruses: A Perspective to Develop Anti-COVID-19 Medicines'
