--- a/_studies/2021-09-28_10.3389_fpubh.2021.729559.md
+++ b/_studies/2021-09-28_10.3389_fpubh.2021.729559.md
@@ -9,7 +9,7 @@ authors:     'Zhang, C, Jin, H, Wen, YF, et al.'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 status:      default
-## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
+## Status der Publikation. default = default, Preprint oder Handout (Thesenpapier)
 ##
 en:
   subtitle:    'Efficacy of COVID-19 Treatments: A Bayesian Network Meta-Analysis of Randomized Controlled Trials'
