--- a/_studies/2021-02-13_10.1111_eci.13520.md
+++ b/_studies/2021-02-13_10.1111_eci.13520.md
@@ -9,7 +9,7 @@ authors:      'Pilz, S, Chakeri, A, John, PA, et al.'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 status:       default
-## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
+## Status der Publikation. default = default, Preprint oder Handout (Thesenpapier)
 ##
 en:
   subtitle:    'SARS-CoV-2 re-infection risk in Austria'
