--- a/_studies/2021-03-30_10.3389_fimmu.2021.663586.md
+++ b/_studies/2021-03-30_10.3389_fimmu.2021.663586.md
@@ -9,7 +9,7 @@ authors:      'Wehbe, Z, Wehbe, M, Iratni, R, et al.'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 status:       default
-## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
+## Status der Publikation. default = default, Preprint oder Handout (Thesenpapier)
 ##
 en:
   subtitle:    'Repurposing Ivermectin for COVID-19: Molecular Aspects and Therapeutic Possibilities'
