--- a/_studies/2021-06-14_10.3389_fphar.2021.659577.md
+++ b/_studies/2021-06-14_10.3389_fphar.2021.659577.md
@@ -9,7 +9,7 @@ authors:      'Alam, S, Kamal, TB, Sarker, M, et al.'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 status:       default
-## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
+## Status der Publikation. default = default, Preprint oder Handout (Thesenpapier)
 ##
 en:
   subtitle:    'Therapeutic Effectiveness and Safety of Repurposing Drugs for the Treatment of COVID-19: Position Standing in 2021'
