--- a/_studies/2021-06-17_10.1155_2021_6622410.md
+++ b/_studies/2021-06-17_10.1155_2021_6622410.md
@@ -9,7 +9,7 @@ authors:      'Tegen, D, Dessie, K, Damtie, D'
 ## Autorinnen und Autoren der Studie – bitte die einfachen Anführungszeichen beachten!
 ##
 status:       default
-## Status der Publikation. Peer Reviewed = default, Preprint oder Handout (Thesenpapier)
+## Status der Publikation. default = default, Preprint oder Handout (Thesenpapier)
 ##
 en:
   subtitle:    'Candidate Anti-COVID-19 Medicinal Plants from Ethiopia: A Review of Plants Traditionally Used to Treat Viral Diseases'
