--- a/_studies/2022-02-04_10.1101_2022.02.03.479037.md
+++ b/_studies/2022-02-04_10.1101_2022.02.03.479037.md
@@ -1,6 +1,6 @@
 ---
 date:        2022-02-04
-title:       preprint from bioRxiv
+title:       bioRxiv
 authors:      'Gagne, M, Moliva, JI, Foulds, KE, et al.'
 status:       Preprint
 en:
