--- a/_studies/2022-02-06_researchgate_358386329.md
+++ b/_studies/2022-02-06_researchgate_358386329.md
@@ -1,6 +1,6 @@
 ---
 date:        2022-02-06
-title:       preprint from Researchgate
+title:       Researchgate
 authors:      'Kerr, L, Baldi, F, Barbosa Lôbo, R, et al.'
 status:       Preprint
 en:
